.k8s/overlays/prod/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
    - caopuzheng.mids255.com
  gateways:
    - istio-ingress/caopuzheng-gateway
  http:
    - match:
        - uri:
            exact: /predict
        - uri:
            exact: /bulk_predict
        - uri:
            prefix: /hello
        - uri:
            prefix: /health
        - uri:
            prefix: /docs
        - uri:
            prefix: /openapi.json
      route:
        - destination:
            host: server
            port:
              number: 8000
